Optimizations on padding, margins etc.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -20,10 +20,12 @@
 
       .contact-form {
         display: inline-block;
+        padding: 0 1rem 0 1rem;
 
         input,
         textarea {
           margin-bottom: 0rem;
+          padding: 0.5rem;
         }
       }
     }
@@ -48,10 +50,12 @@
       .contact-form {
         display: inline-block;
         width: 100%;
+        padding: 0 1rem 0 1rem;
 
         input,
         textarea {
           margin-bottom: 0rem;
+          padding: 0.5rem;
         }
       }
     }
@@ -128,10 +132,12 @@
     .contact-form {
       display: inline-block;
       width: 100%;
+      padding: 0 1rem 0 1rem;
 
       input,
       textarea {
         margin-bottom: 0rem;
+        padding: 0.5rem;
       }
     }
   }
