--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,13 +59,15 @@ main {
       padding: 0.4rem;
       @include easeOut;
 
-      &:hover {
+      &:hover,
+      &:focus {
         color: $secondary-color;
       }
     }
   }
 
   &#home {
+    position: fixed;
     overflow: hidden;
 
     h1 {
@@ -83,9 +85,11 @@ main {
   grid-template-columns: repeat(3, 1fr);
 
   a {
-    &:hover, &:focus {
+
+    &:hover,
+    &:focus {
       text-decoration: underline;
-    } 
+    }
   }
 
   .bio-image {
@@ -129,7 +133,8 @@ main {
     width: 100%;
     border: 3px #fff solid;
 
-    &:hover {
+    &:hover,
+    &:focus {
       opacity: 0.5;
       border-color: $secondary-color;
       @include easeOut;
@@ -158,12 +163,15 @@ main {
       display: inline-block;
       font-size: larger;
       width: 60%;
-      border: 0;
-      text-transform: uppercase;
       padding: 1rem;
       outline: 0;
-  
-      &:hover {
+      border-radius: 10px;
+      background-color: #fff;
+      border: 1px solid darken($primary-color, 50);
+      text-transform: uppercase;
+
+      &:hover,
+      &:focus {
         background: darken($primary-color, 5);
         color: $secondary-color;
         @include easeOut;
@@ -174,11 +182,12 @@ main {
   input,
   textarea {
     width: 100%;
-    border: 1px solid darken($primary-color, 50);
     padding: 0.5rem;
     margin-bottom: 2rem;
     font-size: 18px;
     font-weight: 400;
+    border-radius: 10px;
+    border: 1px solid darken($primary-color, 50);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 }
@@ -190,7 +199,8 @@ main {
   border: 0;
   margin-bottom: 0.3rem;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background: $secondary-color;
     color: set-text-color($secondary-color);
   }
